first version ecommerce made

--- a/index.html
+++ b/index.html
@@ -26,12 +26,203 @@
       }
     }
   </script>
-  <title>Adidas</title>
+  <script src="https://kit.fontawesome.com/a413ea44fb.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="./assets/img/logo.svg" type="image/x-icon">
+  <link rel="stylesheet" href="./assets/css/app.css">
+  <title>Zapatillas adidas Originals | adidas Perú</title>
 </head>
 
-<body>
+<body class="">
+  <div class="bg-black text-white flex justify-evenly text-xs py-1 font-bold">
+    <p>💥HASTA 30% OFF + 30% DCTO. ADICIONAL EXCLUSIVO MIEMBROS ADICLUB EN CATÁLOGO SELECCIONADO💥</p>
+    <p><i class="fa fa-car"></i> ENVÍOS GRATIS A NIVEL NACIONAL ¡SOLO PARA MIEMBROS ADICLUB!</p>
+  </div>
 
-  <script src="./assets/js/app.js"></script>
+  <header class="flex justify-between border-bottom pt-4 px-6 items-center">
+    <div class="logo">
+      <img src="./assets/img/logo.svg">
+    </div>
+    <nav class="sm:hidden lg:block">
+      <ul class="flex gap-4">
+        <li><a class="font-bold" href="#">MUJER</a></li>
+        <li><a class="font-bold" href="#">HOMBRE</a></li>
+        <li><a class="font-bold" href="#">NIÑOS</a></li>
+        <li><a class="" href="#">DEPORTES</a></li>
+        <li><a class="" href="#">MARCAS</a></li>
+        <li><a class="" href="#">COLECCIONES</a></li>
+      </ul>
+    </nav>
+    <div class="flex gap-4">
+      <div class="search">
+        <input type="search" class="border font-bold px-2 bg-gray-200" placeholder="Buscar">
+      </div>
+      <div class="login">
+        <i class="fa fa-user"></i>
+      </div>
+      <div class="cart">
+        <i class="fa fa-shopping-bag" count=""></i>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <div class="container-sm">
+
+      <div class="row row-cols-3 my-6 gap-y-4">
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/1.webp">
+            <span class="price">S/.429</span>
+          </div>
+          <div class="details mt-1">
+            <p>Zapatillas Forum 84 Low</p>
+            <p class="text-gray-500">Hombre Originals</p>
+            <div class="flex">
+              <p>6 colores</p>
+              <p>&nbsp;-&nbsp; envio gratis</p>
+            </div>
+            <button class="btn btn-primary btn-shop1">Shop now!</button>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/2.webp">
+            <span class="price">S/.299</span>
+          </div>
+          <div class="details mt-1">
+            <p>SAMBA</p>
+            <p class="text-gray-500">Hombre Originals</p>
+            <div class="flex">
+              <p>solo en adidas</p>
+            </div>
+            <button class="btn btn-primary btn-shop2">Shop now!</button>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/3.webp">
+            <span class="price">S/.479</span>
+          </div>
+          <div class="details mt-1">
+            <p>Zapatillas Superstar</p>
+            <p class="text-gray-500">Originals</p>
+            <div class="flex">
+              <p>19 colores</p>
+              <p>&nbsp;-&nbsp; envio gratis</p>
+            </div>
+            <button class="btn btn-primary btn-shop3">Shop now!</button>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/4.webp">
+            <span class="price">S/.399</span>
+          </div>
+          <div class="details mt-1">
+            <p>Zapatillas Forum 84 Camp Low</p>
+            <p class="text-gray-500">Hombre Originals</p>
+            <div class="flex">
+              <p>3 colores</p>
+              <p>&nbsp;-&nbsp; envio gratis</p>
+            </div>
+            <button class="btn btn-primary btn-shop4">Shop now!</button>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/5.webp">
+            <span class="price">S/.649</span>
+          </div>
+          <div class="details mt-1">
+            <p>FORUM BOLD W</p>
+            <p class="text-gray-500">Mujer Originals</p>
+            <div class="flex">
+              <p>8 colores</p>
+              <p>&nbsp;-&nbsp; solo en adidas</p>
+            </div>
+          </div>
+          <button class="btn btn-primary btn-shop5">Shop now!</button>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/6.webp">
+            <span class="price">S/.476</span>
+          </div>
+          <div class="details mt-1">
+            <p>Zapatillas Forum 84 Low</p>
+            <p class="text-gray-500">Hombre Originals</p>
+            <div class="flex">
+              <p class="text-blue-500">Solo para miembros</p>
+            </div>
+          </div>
+          <button class="btn btn-primary btn-shop6">Shop now!</button>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/7.webp">
+            <span class="price">S/.379</span>
+          </div>
+          <div class="details mt-1">
+            <p>Zapatillas NMD_V3</p>
+            <p class="text-gray-500">Originals</p>
+            <div class="flex">
+              <p>9 colores</p>
+              <p>&nbsp;-&nbsp; envío gratis</p>
+            </div>
+          </div>
+          <button class="btn btn-primary btn-shop7">Shop now!</button>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/8.webp">
+            <span class="price">S/.399</span>
+          </div>
+          <div class="details mt-1">
+            <p>Zapatillas NMD_R1</p>
+            <p class="text-gray-500">Originals</p>
+            <div class="flex">
+              <p>25 colores</p>
+            </div>
+          </div>
+          <button class="btn btn-primary btn-shop8">Shop now!</button>
+        </div>
+
+        <div class="col">
+          <div class="img__price__container">
+            <i class="far fa-heart"></i>
+            <img src="./assets/img/9.webp">
+            <span class="price">S/.549</span>
+          </div>
+          <div class="details mt-1">
+            <p>FORUM EXHIBIT LOW 2</p>
+            <p class="text-gray-500">Hombre Originals</p>
+            <div class="flex">
+              <p>envío gratis</p>
+            </div>
+            <button class="btn btn-primary btn-shop9">Shop now!</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <script src=" ./assets/js/app.js"></script>
 </body>
 
 </html>
