--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="logo">
       <img src="./assets/img/logo.svg">
     </div>
-    <nav class="sm:hidden lg:block">
+    <nav class="sm:hidden lg:block place-self-end pb-2">
       <ul class="flex gap-4">
         <li><a class="font-bold" href="#">MUJER</a></li>
         <li><a class="font-bold" href="#">HOMBRE</a></li>
@@ -60,16 +60,16 @@
     <div class="flex gap-4">
       <div class="search">
         <div class="w-52 h-6 bg-gray-200 flex justify-between items-center px-2 hover:border-gray-400 hover:border">
-          <p>Buscar</p>
+          <p class="flex">Buscar</p>
           <i class="fa fa-search"></i>
         </div>
 
       </div>
       <div class="login">
-        <i class="fa fa-user cursor-pointer"></i>
+        <i class="fa fa-user cursor-pointer  text-xl"></i>
       </div>
       <div class="cart">
-        <i class="fa fa-shopping-bag cursor-pointer" count=""></i>
+        <i class="fa fa-shopping-bag cursor-pointer text-xl" count=""></i>
         <div class="pasarela-container hidden">
           <p class="py-2 text-center underline font-bold">Pasarela de pago</p>
           <div>
