--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <p>6 colores</p>
               <p>&nbsp;-&nbsp; envio gratis</p>
             </div>
-            <button class="btn btn-primary btn-shop1">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop1">Shop now!</button>
           </div>
         </div>
 
@@ -139,7 +139,7 @@
             <div class="flex">
               <p>solo en adidas</p>
             </div>
-            <button class="btn btn-primary btn-shop2">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop2">Shop now!</button>
           </div>
         </div>
 
@@ -156,7 +156,7 @@
               <p>19 colores</p>
               <p>&nbsp;-&nbsp; envio gratis</p>
             </div>
-            <button class="btn btn-primary btn-shop3">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop3">Shop now!</button>
           </div>
         </div>
 
@@ -173,7 +173,7 @@
               <p>3 colores</p>
               <p>&nbsp;-&nbsp; envio gratis</p>
             </div>
-            <button class="btn btn-primary btn-shop4">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop4">Shop now!</button>
           </div>
         </div>
 
@@ -191,7 +191,7 @@
               <p>&nbsp;-&nbsp; solo en adidas</p>
             </div>
           </div>
-          <button class="btn btn-primary btn-shop5">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop5">Shop now!</button>
         </div>
 
         <div class="col">
@@ -207,7 +207,7 @@
               <p class="text-blue-500">Solo para miembros</p>
             </div>
           </div>
-          <button class="btn btn-primary btn-shop6">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop6">Shop now!</button>
         </div>
 
         <div class="col">
@@ -224,7 +224,7 @@
               <p>&nbsp;-&nbsp; envío gratis</p>
             </div>
           </div>
-          <button class="btn btn-primary btn-shop7">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop7">Shop now!</button>
         </div>
 
         <div class="col">
@@ -240,7 +240,7 @@
               <p>25 colores</p>
             </div>
           </div>
-          <button class="btn btn-primary btn-shop8">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop8">Shop now!</button>
         </div>
 
         <div class="col">
@@ -255,7 +255,7 @@
             <div class="flex">
               <p>envío gratis</p>
             </div>
-            <button class="btn btn-primary btn-shop9">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop9">Shop now!</button>
           </div>
         </div>
       </div>
