add description and lazy loading to images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Make a template inspiration about adidas">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -113,7 +114,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/1.webp">
+            <img loading="lazy" src="./assets/img/1.webp">
             <span class="price">S/.429</span>
           </div>
           <div class="details mt-1">
@@ -130,7 +131,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/2.webp">
+            <img loading="lazy" src="./assets/img/2.webp">
             <span class="price">S/.299</span>
           </div>
           <div class="details mt-1">
@@ -146,7 +147,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/3.webp">
+            <img loading="lazy" src="./assets/img/3.webp">
             <span class="price">S/.479</span>
           </div>
           <div class="details mt-1">
@@ -163,7 +164,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/4.webp">
+            <img loading="lazy" src="./assets/img/4.webp">
             <span class="price">S/.399</span>
           </div>
           <div class="details mt-1">
@@ -180,7 +181,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/5.webp">
+            <img loading="lazy" src="./assets/img/5.webp">
             <span class="price">S/.649</span>
           </div>
           <div class="details mt-1">
@@ -197,7 +198,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/6.webp">
+            <img loading="lazy" src="./assets/img/6.webp">
             <span class="price">S/.476</span>
           </div>
           <div class="details mt-1">
@@ -213,7 +214,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/7.webp">
+            <img loading="lazy" src="./assets/img/7.webp">
             <span class="price">S/.379</span>
           </div>
           <div class="details mt-1">
@@ -230,7 +231,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/8.webp">
+            <img loading="lazy" src="./assets/img/8.webp">
             <span class="price">S/.399</span>
           </div>
           <div class="details mt-1">
@@ -246,7 +247,7 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img src="./assets/img/9.webp">
+            <img loading="lazy" src="./assets/img/9.webp">
             <span class="price">S/.549</span>
           </div>
           <div class="details mt-1">
