add some changes to improve accsesibility

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
   <link rel="shortcut icon" href="./assets/img/logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/app.css">
   <title>Zapatillas adidas Originals | adidas Perú</title>
+  <link rel="manifest" href="manifest.json">
 </head>
 
-<body class="">
-  <div class="bg-black text-white flex justify-evenly text-xs py-2 font-bold">
+<body>
+  <div class="bg-black text-white flex flex-col text-center lg:flex-row justify-evenly text-xs py-2 font-bold">
     <p class="hover:border-b cursor-pointer">💥HASTA 30% OFF + 30% DCTO. ADICIONAL EXCLUSIVO MIEMBROS ADICLUB EN
       CATÁLOGO
       SELECCIONADO💥</p>
@@ -46,9 +47,9 @@
 
   <header class="flex justify-between border-bottom pt-4 px-6 items-center">
     <div class="logo">
-      <img src="./assets/img/logo.svg">
+      <img src="./assets/img/logo.svg" alt="logo">
     </div>
-    <nav class="sm:hidden lg:block place-self-end pb-2">
+    <nav class="hidden lg:block place-self-end pb-2">
       <ul class="flex gap-4">
         <li><a class="font-bold" href="#">MUJER</a></li>
         <li><a class="font-bold" href="#">HOMBRE</a></li>
@@ -60,7 +61,8 @@
     </nav>
     <div class="flex gap-4">
       <div class="search">
-        <div class="w-52 h-6 bg-gray-200 flex justify-between items-center px-2 hover:border-gray-400 hover:border">
+        <div
+          class="w-52 h-6 bg-gray-200 flex justify-between items-center px-2 hover:border-gray-400 hover:border cursor-text">
           <p class="flex">Buscar</p>
           <i class="fa fa-search"></i>
         </div>
@@ -77,24 +79,23 @@
             <div class="flex justify-between pb-4">
               <p>🔵Tarjeta de crédito</p>
               <div class="flex gap-2 items-center">
-                <img src="./assets/img/visa.webp" class="w-6 h-3">
-                <img src="./assets/img/mastercard.png" class="w-6 h-3">
-                <img src="./assets/img/ae.png" class="w-6 h-3">
+                <img src="./assets/img/visa.webp" class="w-6 h-3" alt="visa">
+                <img src="./assets/img/mastercard.png" class="w-6 h-3" alt="master-card">
+                <img src="./assets/img/ae.png" class="w-6 h-3" alt="american express">
               </div>
             </div>
             <div class="flex flex-col gap-4">
               <div class="flex justify-between border border-gray-600 px-2">
                 <input class="outline-none" placeholder="Número de tarjeta">
-                <img src="./assets/img/lock.svg" width="15px">
+                <img src="./assets/img/lock.svg" width="15px" alt="lock">
               </div>
               <div class="flex justify-between border border-gray-600 px-2">
                 <input class="outline-none" type="text" placeholder="Nombre del titular">
               </div>
               <div class="flex justify-between gap-2">
-                <input type="text" placeholder="Fecha de vencimiento"
-                  class="border border-gray-600 text-xs outline-none px-2">
+                <input type="date" class="border border-gray-600 text-xs outline-none px-2">
                 <div class="border border-gray-600 flex items-center text-xs px-2">
-                  <input type="text" placeholder="Código de seguridad" class="outline-none">
+                  <input type="password" placeholder="Código de seguridad" class="outline-none">
                   <i class="fa fa-question"></i>
                 </div>
               </div>
@@ -109,15 +110,15 @@
   <main>
     <div class="container-sm">
 
-      <div class="row row-cols-3 my-10 gap-y-4">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3  my-10 gap-y-4">
 
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/1.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/1.webp" alt="zapatilla">
             <span class="price">S/.429</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>Zapatillas Forum 84 Low</p>
             <p class="text-gray-500">Hombre Originals</p>
             <div class="flex">
@@ -131,10 +132,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/2.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/2.webp" alt="zapatilla">
             <span class="price">S/.299</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>SAMBA</p>
             <p class="text-gray-500">Hombre Originals</p>
             <div class="flex">
@@ -147,10 +148,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/3.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/3.webp" alt="zapatilla">
             <span class="price">S/.479</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>Zapatillas Superstar</p>
             <p class="text-gray-500">Originals</p>
             <div class="flex">
@@ -164,10 +165,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/4.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/4.webp" alt="zapatilla">
             <span class="price">S/.399</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>Zapatillas Forum 84 Camp Low</p>
             <p class="text-gray-500">Hombre Originals</p>
             <div class="flex">
@@ -181,10 +182,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/5.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/5.webp" alt="zapatilla">
             <span class="price">S/.649</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>FORUM BOLD W</p>
             <p class="text-gray-500">Mujer Originals</p>
             <div class="flex">
@@ -198,10 +199,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/6.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/6.webp" alt="zapatilla">
             <span class="price">S/.476</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>Zapatillas Forum 84 Low</p>
             <p class="text-gray-500">Hombre Originals</p>
             <div class="flex">
@@ -214,10 +215,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/7.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/7.webp" alt="zapatilla">
             <span class="price">S/.379</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>Zapatillas NMD_V3</p>
             <p class="text-gray-500">Originals</p>
             <div class="flex">
@@ -231,10 +232,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/8.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/8.webp" alt="zapatilla">
             <span class="price">S/.399</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>Zapatillas NMD_R1</p>
             <p class="text-gray-500">Originals</p>
             <div class="flex">
@@ -247,10 +248,10 @@
         <div class="col">
           <div class="img__price__container">
             <i class="far fa-heart"></i>
-            <img loading="lazy" src="./assets/img/9.webp">
+            <img loading="lazy" class="img-fluid w-full" src="./assets/img/9.webp" alt="zapatilla">
             <span class="price">S/.549</span>
           </div>
-          <div class="details mt-1">
+          <div class="details mt-2">
             <p>FORUM EXHIBIT LOW 2</p>
             <p class="text-gray-500">Hombre Originals</p>
             <div class="flex">
