--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="search">
         <div
           class="w-52 h-6 bg-gray-200 flex justify-between items-center px-2 hover:border-gray-400 hover:border cursor-text">
-          <p class="flex">Buscar</p>
+          <input type="search" class="bg-transparent outline-none" placeholder="Search">
           <i class="fa fa-search"></i>
         </div>
 
@@ -120,12 +120,13 @@
           </div>
           <div class="details mt-2">
             <p>Zapatillas Forum 84 Low</p>
-            <p class="text-gray-600">Hombre Originals</p>
+            <p class="text-gray-6 00">Hombre Originals</p>
             <div class="flex">
               <p>6 colores</p>
               <p>&nbsp;-&nbsp; envio gratis</p>
             </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop1">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop1">Shop now!&nbsp; <i
+                class="fas fa-shopping-cart"></i></button>
           </div>
         </div>
 
@@ -137,11 +138,12 @@
           </div>
           <div class="details mt-2">
             <p>SAMBA</p>
-            <p class="text-gray-600">Hombre Originals</p>
+            <p class="text-gray-6 00">Hombre Originals</p>
             <div class="flex">
               <p>solo en adidas</p>
             </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop2">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop2">Shop now!&nbsp; <i
+                class="fas fa-shopping-cart"></i></button>
           </div>
         </div>
 
@@ -153,12 +155,13 @@
           </div>
           <div class="details mt-2">
             <p>Zapatillas Superstar</p>
-            <p class="text-gray-600">Originals</p>
+            <p class="text-gray-6 00">Originals</p>
             <div class="flex">
               <p>19 colores</p>
               <p>&nbsp;-&nbsp; envio gratis</p>
             </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop3">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop3">Shop now!&nbsp; <i
+                class="fas fa-shopping-cart"></i></button>
           </div>
         </div>
 
@@ -170,12 +173,13 @@
           </div>
           <div class="details mt-2">
             <p>Zapatillas Forum 84 Camp Low</p>
-            <p class="text-gray-600">Hombre Originals</p>
+            <p class="text-gray-6 00">Hombre Originals</p>
             <div class="flex">
               <p>3 colores</p>
               <p>&nbsp;-&nbsp; envio gratis</p>
             </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop4">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop4">Shop now!&nbsp; <i
+                class="fas fa-shopping-cart"></i></button>
           </div>
         </div>
 
@@ -187,13 +191,14 @@
           </div>
           <div class="details mt-2">
             <p>FORUM BOLD W</p>
-            <p class="text-gray-600">Mujer Originals</p>
+            <p class="text-gray-6 00">Mujer Originals</p>
             <div class="flex">
               <p>8 colores</p>
               <p>&nbsp;-&nbsp; solo en adidas</p>
             </div>
           </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop5">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop5">Shop now!&nbsp; <i
+              class="fas fa-shopping-cart"></i></button>
         </div>
 
         <div class="col">
@@ -204,12 +209,13 @@
           </div>
           <div class="details mt-2">
             <p>Zapatillas Forum 84 Low</p>
-            <p class="text-gray-600">Hombre Originals</p>
+            <p class="text-gray-6 00">Hombre Originals</p>
             <div class="flex">
               <p class="text-blue-600">Solo para miembros</p>
             </div>
           </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop6">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop6">Shop now!&nbsp; <i
+              class="fas fa-shopping-cart"></i></button>
         </div>
 
         <div class="col">
@@ -220,13 +226,14 @@
           </div>
           <div class="details mt-2">
             <p>Zapatillas NMD_V3</p>
-            <p class="text-gray-600">Originals</p>
+            <p class="text-gray-6 00">Originals</p>
             <div class="flex">
               <p>9 colores</p>
               <p>&nbsp;-&nbsp; envío gratis</p>
             </div>
           </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop7">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop7">Shop now!&nbsp; <i
+              class="fas fa-shopping-cart"></i></button>
         </div>
 
         <div class="col">
@@ -237,12 +244,13 @@
           </div>
           <div class="details mt-2">
             <p>Zapatillas NMD_R1</p>
-            <p class="text-gray-600">Originals</p>
+            <p class="text-gray-6 00">Originals</p>
             <div class="flex">
               <p>25 colores</p>
             </div>
           </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop8">Shop now!</button>
+          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop8">Shop now!&nbsp; <i
+              class="fas fa-shopping-cart"></i></button>
         </div>
 
         <div class="col">
@@ -253,11 +261,12 @@
           </div>
           <div class="details mt-2">
             <p>FORUM EXHIBIT LOW 2</p>
-            <p class="text-gray-600">Hombre Originals</p>
+            <p class="text-gray-6 00">Hombre Originals</p>
             <div class="flex">
               <p>envío gratis</p>
             </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop9">Shop now!</button>
+            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop9">Shop now!&nbsp; <i
+                class="fas fa-shopping-cart"></i></button>
           </div>
         </div>
 
