add styles input number

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="flex flex-col gap-4">
               <div class="flex justify-between border border-gray-600 px-2">
-                <input class="outline-none" placeholder="Número de tarjeta">
+                <input type="number" class="outline-none" placeholder="Número de tarjeta">
                 <img src="./assets/img/lock.svg" width="15px" alt="lock">
               </div>
               <div class="flex justify-between border border-gray-600 px-2">
@@ -110,7 +110,7 @@
   <main>
     <div class="container-sm">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3  my-10 gap-y-4">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3  my-10 gap-y-8">
 
         <div class="col">
           <div class="img__price__container">
