--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="shortcut icon" href="./assets/img/logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/app.css">
   <title>Zapatillas adidas Originals | adidas Perú</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./manifest.json">
 </head>
 
 <body>
