add products.json and modify app.js, make all the process with json file and fetch

--- a/index.html
+++ b/index.html
@@ -110,165 +110,8 @@
   <main>
     <div class="container-sm">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3  my-10 gap-y-8">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3  my-10 gap-y-8" id="products__container">
 
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/1.webp" alt="zapatilla">
-            <span class="price">S/.429</span>
-          </div>
-          <div class="details mt-2">
-            <p>Zapatillas Forum 84 Low</p>
-            <p class="text-gray-6 00">Hombre Originals</p>
-            <div class="flex">
-              <p>6 colores</p>
-              <p>&nbsp;-&nbsp; envio gratis</p>
-            </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop1">Shop now!&nbsp; <i
-                class="fas fa-shopping-cart"></i></button>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/2.webp" alt="zapatilla">
-            <span class="price">S/.299</span>
-          </div>
-          <div class="details mt-2">
-            <p>SAMBA</p>
-            <p class="text-gray-6 00">Hombre Originals</p>
-            <div class="flex">
-              <p>solo en adidas</p>
-            </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop2">Shop now!&nbsp; <i
-                class="fas fa-shopping-cart"></i></button>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/3.webp" alt="zapatilla">
-            <span class="price">S/.479</span>
-          </div>
-          <div class="details mt-2">
-            <p>Zapatillas Superstar</p>
-            <p class="text-gray-6 00">Originals</p>
-            <div class="flex">
-              <p>19 colores</p>
-              <p>&nbsp;-&nbsp; envio gratis</p>
-            </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop3">Shop now!&nbsp; <i
-                class="fas fa-shopping-cart"></i></button>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/4.webp" alt="zapatilla">
-            <span class="price">S/.399</span>
-          </div>
-          <div class="details mt-2">
-            <p>Zapatillas Forum 84 Camp Low</p>
-            <p class="text-gray-6 00">Hombre Originals</p>
-            <div class="flex">
-              <p>3 colores</p>
-              <p>&nbsp;-&nbsp; envio gratis</p>
-            </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop4">Shop now!&nbsp; <i
-                class="fas fa-shopping-cart"></i></button>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/5.webp" alt="zapatilla">
-            <span class="price">S/.649</span>
-          </div>
-          <div class="details mt-2">
-            <p>FORUM BOLD W</p>
-            <p class="text-gray-6 00">Mujer Originals</p>
-            <div class="flex">
-              <p>8 colores</p>
-              <p>&nbsp;-&nbsp; solo en adidas</p>
-            </div>
-          </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop5">Shop now!&nbsp; <i
-              class="fas fa-shopping-cart"></i></button>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/6.webp" alt="zapatilla">
-            <span class="price">S/.476</span>
-          </div>
-          <div class="details mt-2">
-            <p>Zapatillas Forum 84 Low</p>
-            <p class="text-gray-6 00">Hombre Originals</p>
-            <div class="flex">
-              <p class="text-blue-600">Solo para miembros</p>
-            </div>
-          </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop6">Shop now!&nbsp; <i
-              class="fas fa-shopping-cart"></i></button>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/7.webp" alt="zapatilla">
-            <span class="price">S/.379</span>
-          </div>
-          <div class="details mt-2">
-            <p>Zapatillas NMD_V3</p>
-            <p class="text-gray-6 00">Originals</p>
-            <div class="flex">
-              <p>9 colores</p>
-              <p>&nbsp;-&nbsp; envío gratis</p>
-            </div>
-          </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop7">Shop now!&nbsp; <i
-              class="fas fa-shopping-cart"></i></button>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/8.webp" alt="zapatilla">
-            <span class="price">S/.399</span>
-          </div>
-          <div class="details mt-2">
-            <p>Zapatillas NMD_R1</p>
-            <p class="text-gray-6 00">Originals</p>
-            <div class="flex">
-              <p>25 colores</p>
-            </div>
-          </div>
-          <button class="btn btn-primary mt-2 d-block m-auto  btn-shop8">Shop now!&nbsp; <i
-              class="fas fa-shopping-cart"></i></button>
-        </div>
-
-        <div class="col">
-          <div class="img__price__container">
-            <i class="far fa-heart"></i>
-            <img loading="lazy" class="img-fluid w-full" src="./assets/img/9.webp" alt="zapatilla">
-            <span class="price">S/.549</span>
-          </div>
-          <div class="details mt-2">
-            <p>FORUM EXHIBIT LOW 2</p>
-            <p class="text-gray-6 00">Hombre Originals</p>
-            <div class="flex">
-              <p>envío gratis</p>
-            </div>
-            <button class="btn btn-primary mt-2 d-block m-auto  btn-shop9">Shop now!&nbsp; <i
-                class="fas fa-shopping-cart"></i></button>
-          </div>
-        </div>
 
       </div>
     </div>
