add shopping cart

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       <div class="cart">
         <i class="fa fa-shopping-bag cursor-pointer text-xl" count=""></i>
         <div class="pasarela-container hidden">
-          <p class="py-2 text-center underline font-bold">Pasarela de pago</p>
+          <p class="py-2 text-center underline font-bold">Carrito de compras</p>
+          <div class="products-cart-container"></div>
           <div>
             <div class="flex justify-between pb-4">
               <p>🔵Tarjeta de crédito</p>
@@ -108,13 +109,14 @@
   </header>
 
   <main>
+
     <div class="container-sm">
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3  my-10 gap-y-8" id="products__container">
-
-
       </div>
+
     </div>
+
   </main>
 
   <script src=" ./assets/js/app.js"></script>
