some styles changes

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
       <div class="cart">
         <i class="fa fa-shopping-bag cursor-pointer text-xl" count=""></i>
         <div class="pasarela-container hidden">
-          <p class="py-2 text-center underline font-bold">Carrito de compras</p>
+          <p class="py-2 text-center underline font-bold">Shopping cart</p>
           <div class="products-cart-container"></div>
           <div>
             <div class="flex justify-between pb-4">
-              <p>🔵Tarjeta de crédito</p>
+              <p>🔵Credit card</p>
               <div class="flex gap-2 items-center">
                 <img src="./assets/img/visa.webp" class="w-6 h-3" alt="visa">
                 <img src="./assets/img/mastercard.png" class="w-6 h-3" alt="master-card">
@@ -87,16 +87,16 @@
             </div>
             <div class="flex flex-col gap-4">
               <div class="flex justify-between border border-gray-600 px-2">
-                <input type="number" class="outline-none" placeholder="Número de tarjeta">
+                <input type="number" class="outline-none" placeholder="Card number">
                 <img src="./assets/img/lock.svg" width="15px" alt="lock">
               </div>
               <div class="flex justify-between border border-gray-600 px-2">
-                <input class="outline-none" type="text" placeholder="Nombre del titular">
+                <input class="outline-none" type="text" placeholder="Owner's name">
               </div>
               <div class="flex justify-between gap-2">
                 <input type="date" class="border border-gray-600 text-xs outline-none px-2">
                 <div class="border border-gray-600 flex items-center text-xs px-2">
-                  <input type="password" placeholder="Código de seguridad" class="outline-none">
+                  <input type="password" placeholder="Security code" class="outline-none">
                   <i class="fa fa-question"></i>
                 </div>
               </div>
